# Predictive-Fee-Analytics-Dashboard

./: README.md  app.py  requirements.txt
data/: historical_fees.csv
models/: xgb_fee_model.json
smart-contract/: Cargo.toml
smart-contract/src/: lib.rs
src/: batching_optimizer.py  data_ingestion.py  ml_model.py  stellar_service.py
