[package]
name = "batch-scheduler"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contract for fee-optimized batch transaction scheduling on Stellar"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7.1" }

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
